--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@
   background-color: rgb(7, 88, 113);
   color: white;
   text-shadow: 2px 1px 0px hsl(0, 0%, 0%),
-  1px 2px 0px hsl(0, 0%, 0%);
+    1px 2px 0px hsl(0, 0%, 0%);
 }
 
 body {
@@ -16,6 +16,7 @@ body {
   justify-content: center;
   flex-direction: column;
   align-items: center;
+  width: 100vw;
 }
 
 .logo {
@@ -39,12 +40,24 @@ body {
   box-shadow: -10px 0px 50px 30px rgba(0, 0, 0, .6) inset;
 }
 
+@media (max-width: 480px) {
+  .background {
+  height: 40vh;
+  }
+
+  .logo {
+    max-width: 250px;
+    align-self: center;
+    margin: 50px auto auto auto;
+  }
+}
 
 .search {
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
+  align-content: center;
 }
 
 
@@ -58,19 +71,26 @@ body {
   padding: 5px 10px;
   box-shadow: 0px 0px 8px rgb(255, 255, 255);
   color: white;
-  margin-top: 20px;
-
+  margin: 20px auto 0 auto;
+  align-self: center;
 }
 
 
-.search-btn {
-  margin: auto;
-  padding: 8px;
-  border-style: none;
-  background-color: rgba(0, 0, 0, 0.0);
-  color: rgb(54, 252, 253);
-  border-radius: 200px;
+@media (max-width: 480px) {
+  .input-search {
+    width: 350px;
+  }
+}
 
+.search-btn {
+  position: absolute;
+  margin: 22px 0 0 -35px;
+  padding: 4px;
+  border-style: none;
+  background-color: rgba(21, 0, 83, 0.0);
+  color: rgb(54, 252, 253);
+  border-radius: 10px;
+  align-self: center;
 }
 
 .search-btn:hover {
@@ -81,32 +101,39 @@ body {
 .search-btn:active {
   background-color: rgb(45, 197, 197);
   color: white;
+  border: solid 1px rgb(255, 255, 255);
 }
 
 .search-btn span {
-  font-size: 30px;
+  font-size: 25px;
 }
 
 .box_result-search {
+  align-self: flex-start;
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
   text-align: start;
-  width: 500px;
+  width: 460px;
   min-height: 35px;
   max-height: 200px;
   border-radius: 10px;
-  margin: 4px auto;
   overflow-y: scroll;
+  margin: 2px auto;
   background-color: rgba(21, 0, 83, 0.7);
   padding: 10px 5px;
   box-shadow: 0px 0px 8px rgb(255, 255, 255);
+  z-index: 1;
+}
+
+@media (max-width: 480px) {
+  .box_result-search {
+    width: 365px;
+  }
 }
 
 .results-button {
   height: 30px;
-  width: 441px;
-  align-self: flex-start;
+  width: max-content;
   text-align: start;
   border-style: none;
   margin: 0;
@@ -114,6 +141,8 @@ body {
   color: rgb(54, 252, 253);
   background-color: rgba(0, 0, 0, 0);
 }
+
+
 
 .results-button:hover {
   cursor: pointer;
@@ -131,8 +160,15 @@ body {
   width: 500px;
 }
 
+@media (max-width: 480px) {
 
- .info-location h1 {
+.info-location {
+  width: 350px;
+  padding-left: 0;
+}
+}
+
+.info-location h1 {
   margin: 10px auto;
   font-size: 40px;
   font-weight: 600;
@@ -144,10 +180,10 @@ body {
   line-height: 34px;
 }
 
-.info-location > ul {
+.info-location>ul {
   display: flex;
   justify-content: space-around;
-  margin: 10px auto;
+  margin: 20px 0;
   list-style: none;
 }
 
@@ -166,7 +202,7 @@ body {
   padding: 10px;
   margin: 20px;
   box-shadow: 2px 2px 8px 5px rgba(0, 0, 0, 0.5), 0px 0px 8px 7px rgba(0, 0, 0, 0.3) inset;
-  
+
   background-color: rgba(14, 35, 110, 0.3);
   text-align: center;
   border-radius: 10px;
@@ -184,7 +220,31 @@ body {
   margin: auto 10px;
   border: outset 1px rgba(255, 255, 255, 0.9);
   border-radius: 0px;
-  
+
+}
+
+@media (max-width: 480px) {
+
+  .card-resident {
+    flex-direction: column;
+    width: 250px;
+    padding: 20px;
+    height: fit-content;
+
+  }
+
+  .card-resident img {
+    align-self: center;
+    max-width: 200px;
+    max-height: 200px;
+  }
+
+
+
+  .card-resident li {
+    margin: 1px auto;
+    font-size: 14px;
+  }
 }
 
 .card-resident li {
@@ -197,7 +257,7 @@ body {
 
 
 #status-resident {
-  margin: 10px 10px;
+  margin: 10px;
   font-size: 30px;
   list-style: initial;
 
@@ -213,7 +273,7 @@ body {
 
 footer {
 
-  position:static;
+  position: static;
   text-align: center;
   padding: 10px;
   margin: 20px;
