--- a/src/App.css
+++ b/src/App.css
@@ -20,13 +20,11 @@ body {
 }
 
 .logo {
-  position: absolute;
-  top: 60px;
-  left: 5px;
-  bottom: 10px;
-  right: 10px;
   max-width: 320px;
-  z-index: 0;
+  position:absolute;
+  top: 60px;
+  left: 10px;
+  right: 10px;
 }
 
 
@@ -46,9 +44,11 @@ body {
   }
 
   .logo {
-    max-width: 250px;
+    position: static;
+    width: 200px;
+    height: 100px;
     align-self: center;
-    margin: 50px auto auto auto;
+    margin: auto;
   }
 }
 
@@ -153,7 +153,7 @@ body {
 }
 
 .info-location {
-  margin: 20px auto;
+  margin: 10px auto 20px auto;
   text-align: center;
   background-color: rgba(68, 233, 244, .4);
   box-shadow: 0px 0px 10px 5px rgba(255, 255, 255, 0.5) inset;
